welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:7: error: type mismatch;
 found   : Int
 required: Boolean
return vuBiscuit
       ^